--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
       padding: 100px;
       text-align: center;
     }
+     .hero img {
+      max-width: 100%;
+      height: auto;
+      margin-bottom: 20px;
+    }
 
     .hero h1 {
       font-size: 36px;
