--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     /* Header Styles */
     header {
-      background: black;
+      background: #001C30;
       color: white;
       padding: 20px;
     }
