--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
             max-width: 100%;
             height: auto;
             margin-bottom: 20px;
+            position: -ms-device-fixed;
+            top: 0;
+            left: 0;
         }
 
         .hero h1 {
@@ -91,7 +94,7 @@
 
         /* About Us Section Styles */
         .about-us {
-            background: #38b6ff;
+            background: #66CCFF;
             color: black;
             padding: 50px;
             text-align: center;
@@ -147,9 +150,34 @@
 </header>
 
 <section class="hero">
-    <h1>Discover Our Exciting New Game</h1>
     <!-- Replace the image URL below with your own image -->
-    <img src="LetterHunter.png" alt="Game Banner">
+    <img src="LetterHunter.png" alt="Game Banner" style="float:left">
+    <img src="QR.png" alt="Game Banner" height="250" width="300" style="float:right">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h1 style="float: right">Become Our Beta Tester Today!</h1>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 </section>
 
 <section class="game-showcase">
@@ -157,9 +185,7 @@
     <!-- Replace the image URL below with your own screenshots or gameplay video -->
     <p >What if Mastering <span style="color: orange">READING</span> and <span style="color: orange">WRITING</span> was as <span style="color: orange">EXCITING</span> as levelling up in a <span style="color: orange">VIDEO GAME?</span> Introducing "LetterHunter," a puzzle game that will
         challenge and thrill you!</p>
-    <video width="1080" height="512" autoplay muted>
-        <source src="test.mp4" type="video/mp4">
-    </video>
+    <img src="Gameplay.gif" alt="Gameplay" height="1080" width="1920">
 </section>
 
 <section class="about-us">
@@ -170,7 +196,7 @@
     <br>
     <h2>Meet the Team</h2>
     <!-- Replace the image URL below with your own team photo or studio workspace image -->
-    <img src="Team.png" alt="Team Photo" height="291" width="856">
+    <img src="Team.png" alt="Team Photo">
 </section>
 
 <section class="contact">
