--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@
             color: white;
             padding: 20px;
             text-align: center;
+        .responsive{
+            width: 100%;
+            height: auto;
+        }
         }
 
     </style>
@@ -196,7 +200,7 @@
     <br>
     <h2>Meet the Team</h2>
     <!-- Replace the image URL below with your own team photo or studio workspace image -->
-    <img src="Team.png" alt="Team Photo">
+    <img src="Team.png" alt="Team Photo" class="responsive">
 </section>
 
 <section class="contact">
