--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
             padding: 50px;
             text-align: center;
         }
+        .responsive{
+            max-width: 100%;
+            height: auto;
+        }
 
 
 
@@ -131,10 +135,6 @@
             color: white;
             padding: 20px;
             text-align: center;
-        .responsive{
-            width: 100%;
-            height: auto;
-        }
         }
 
     </style>
