--- a/index.html
+++ b/index.html
@@ -214,6 +214,10 @@
             vertical-align: middle; /* Align the SVG vertically */
             margin-right: 5px; /* Add some spacing between the SVG and the text */
         }
+        nav ul li a {color:black; text-decoration: none; padding: 10px}
+        a:visited {color:black;}
+        a:hover {color:#08A4FF;}
+        a:active {color:#dcefef;}
         /* Existing styles... */
 
         /* Responsive Styles */
