--- a/index.html
+++ b/index.html
@@ -218,8 +218,10 @@
         a:visited {color:black;}
         a:hover {color:#08A4FF;}
         a:active {color:#dcefef;}
-        /* Existing styles... */
-
+        footer a {color:#dcefef; text-decoration: none; padding: 10px}
+        a:visited {color:#dcefef;}
+        a:hover {color:#08A4FF;}
+        a:active {color:#dcefef;}
         /* Responsive Styles */
         @media only screen and (max-width: 600px) {
             .container {
