--- a/index.html
+++ b/index.html
@@ -215,13 +215,14 @@
             margin-right: 5px; /* Add some spacing between the SVG and the text */
         }
         nav ul li a {color:black; text-decoration: none; padding: 10px}
-        a:visited {color:black;}
-        a:hover {color:#08A4FF;}
-        a:active {color:#dcefef;}
+        nav ul li a:visited {color:black;}
+        nav ul li a:hover {color:#08A4FF;}
+        nav ul li a:active {color:#dcefef;}
+
         footer a {color:#dcefef; text-decoration: none; padding: 10px}
-        a:visited {color:#dcefef;}
-        a:hover {color:#08A4FF;}
-        a:active {color:#dcefef;}
+        footer a:visited {color:#dcefef;}
+        footer a:hover {color:#08A4FF;}
+        footer a:active {color:#dcefef;}
         /* Responsive Styles */
         @media only screen and (max-width: 600px) {
             .container {
