Updated With openbeta

--- a/index.html
+++ b/index.html
@@ -298,9 +298,8 @@
 <div class="container">
     <img src="LetterHunter.png" height="200" width="200"/>
     <h2>Experience the Demo!</h2>
-    <a id = "button" href = "LetterHunter-1_0_0.apk"
-       Download = "test_LetterHunter">
-        <button type = "button"> Download </button>
+    <a id = "button" href = "openbeta.html">
+        <button type = "button"> Join Us Now! </button>
     </a>
 </div>
 
