--- a/index.html
+++ b/index.html
@@ -337,6 +337,7 @@
         <a href="https://www.facebook.com/profile.php?id=100089170032576" target="_blank">Facebook</a>
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>
         <a href="https://www.instagram.com/reanplaystudio" target="_blank">Instagram</a>
+        <p>Or contact us via email: <a href = "mailto:reanplay@gmail.com">reanplay@gmail.com</a></p>
     </div>
 </section>
 <script>
