--- a/openbeta.html
+++ b/openbeta.html
@@ -88,6 +88,22 @@
             text-decoration: none;
             padding: 5px 10px;
         }
+        button {
+            background-color: #ffa033;
+            text-align: center;
+            color: black;
+            padding: 30px;
+            border: none;
+            cursor: pointer;
+            font-size: 16px;
+            font-weight: bold;
+            border-radius: 5px;
+            margin: auto;
+            font-family: customfont;
+        }
+        button:hover {
+            background-color: #005D9F;
+        }
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -103,5 +119,38 @@
         </ul>
     </nav>
 </header>
+<button id="changeSrcBtn"  style="display: block; margin: 0 auto;padding: 30px">Change to iOS</button>
 <iframe src="https://scribehow.com/embed/_LetterHunter_Open_Beta_How_to_Download_the_LetterHunter_Open_Beta__vzSZNOaLQC2ne2hHhZwg3Q?as=scrollable" width="100%" height="640" allowfullscreen frameborder="0"></iframe>
 </body>
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        // Get the iframe element
+        var iframe = document.querySelector("iframe");
+
+        // Get the button element
+        var changeSrcBtn = document.getElementById("changeSrcBtn");
+
+        // Define the sources to toggle between
+        var source1 = "https://scribehow.com/embed/_LetterHunter_Open_Beta_How_to_Download_the_LetterHunter_Open_Beta__vzSZNOaLQC2ne2hHhZwg3Q?as=scrollable";
+        var source2 = "https://scribehow.com/embed/_LetterHunter_Open_Beta__iOS_How_to_Download_the_LetterHunter_Open_Beta_on_iOS__0B71wYu0TZqq0xTyzL0MnQ?as=scrollable";
+
+        // Flag to track the current source
+        var isSource1 = true;
+
+        // Function to toggle sources and change button text
+        function toggleSources() {
+            if (isSource1) {
+                iframe.src = source2;
+                changeSrcBtn.textContent = "Change to Android";
+                isSource1 = false;
+            } else {
+                iframe.src = source1;
+                changeSrcBtn.textContent = "Change to iOS";
+                isSource1 = true;
+            }
+        }
+
+        // Add click event listener to the button
+        changeSrcBtn.addEventListener("click", toggleSources);
+    });
+</script>
