--- a/openbeta.html
+++ b/openbeta.html
@@ -97,7 +97,6 @@
             cursor: pointer;
             font-size: 16px;
             font-weight: bold;
-            border-radius: 5px;
             margin: auto;
             font-family: customfont;
         }
@@ -119,7 +118,7 @@
         </ul>
     </nav>
 </header>
-<button id="changeSrcBtn"  style="display: block; margin: 0 auto;padding: 30px">Change to iOS</button>
+<button id="changeSrcBtn"  style="display: block; margin: 0 auto;width: 100%;">Change to iOS</button>
 <iframe src="https://scribehow.com/embed/_LetterHunter_Open_Beta_How_to_Download_the_LetterHunter_Open_Beta__vzSZNOaLQC2ne2hHhZwg3Q?as=scrollable" width="100%" height="640" allowfullscreen frameborder="0"></iframe>
 </body>
 <script>
