--- a/openbeta.html
+++ b/openbeta.html
@@ -24,7 +24,7 @@
         }
 
         header {
-            font-size: 20px; /* Adjust font size for smaller screens */
+            font-size: 18px; /* Adjust font size for smaller screens */
         }
 
         nav ul {
@@ -95,7 +95,7 @@
             padding: 30px;
             border: none;
             cursor: pointer;
-            font-size: 16px;
+            font-size: 25px;
             font-weight: bold;
             margin: auto;
             font-family: customfont;
@@ -118,8 +118,8 @@
         </ul>
     </nav>
 </header>
-<button id="changeSrcBtn"  style="display: block; margin: 0 auto;width: 100%;">Change to iOS</button>
-<iframe src="https://scribehow.com/embed/_LetterHunter_Open_Beta_How_to_Download_the_LetterHunter_Open_Beta__vzSZNOaLQC2ne2hHhZwg3Q?as=scrollable" width="100%" height="640" allowfullscreen frameborder="0"></iframe>
+<button id="changeSrcBtn"  style="display: block; margin: 0 auto;width: 100%;">Download for Android</button>
+<iframe src="https://scribehow.com/embed/_LetterHunter_Open_Beta__iOS_How_to_Download_the_LetterHunter_Open_Beta_on_iOS__0B71wYu0TZqq0xTyzL0MnQ?as=scrollable" width="100%" height="640" allowfullscreen frameborder="0"></iframe>
 </body>
 <script>
     document.addEventListener("DOMContentLoaded", function() {
@@ -130,8 +130,8 @@
         var changeSrcBtn = document.getElementById("changeSrcBtn");
 
         // Define the sources to toggle between
-        var source1 = "https://scribehow.com/embed/_LetterHunter_Open_Beta_How_to_Download_the_LetterHunter_Open_Beta__vzSZNOaLQC2ne2hHhZwg3Q?as=scrollable";
-        var source2 = "https://scribehow.com/embed/_LetterHunter_Open_Beta__iOS_How_to_Download_the_LetterHunter_Open_Beta_on_iOS__0B71wYu0TZqq0xTyzL0MnQ?as=scrollable";
+        var source2 = "https://scribehow.com/embed/_LetterHunter_Open_Beta_How_to_Download_the_LetterHunter_Open_Beta__vzSZNOaLQC2ne2hHhZwg3Q?as=scrollable";
+        var source1 = "https://scribehow.com/embed/_LetterHunter_Open_Beta__iOS_How_to_Download_the_LetterHunter_Open_Beta_on_iOS__0B71wYu0TZqq0xTyzL0MnQ?as=scrollable";
 
         // Flag to track the current source
         var isSource1 = true;
@@ -140,11 +140,11 @@
         function toggleSources() {
             if (isSource1) {
                 iframe.src = source2;
-                changeSrcBtn.textContent = "Change to Android";
+                changeSrcBtn.textContent = "Download for iOS";
                 isSource1 = false;
             } else {
                 iframe.src = source1;
-                changeSrcBtn.textContent = "Change to iOS";
+                changeSrcBtn.textContent = "Download for Android";
                 isSource1 = true;
             }
         }
