--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 </head>
 <body>
 <header>
-    <div class="logo"><img src="cat.png" height="75" width="75"/></div>
+    <div class="logo"><img src="RPS.png" height="75" width="75"/></div>
     <nav>
         <ul>
             <li><a href="#">Home</a></li>
