--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </style>
 <head>
     <title>RPS - Rean & Play Studio</title>
-    <link rel="icon" type="image/png" href="cat.png">
+    <link rel="icon" type="image/png" href="RPS.png">
     <style>
         body {
             margin: 0;
