--- a/Privacy.html
+++ b/Privacy.html
@@ -18,7 +18,7 @@
 </style>
 <head>
     <title>RPS - Rean & Play Studio</title>
-    <link rel="icon" type="image/png" href="cat.png">
+    <link rel="icon" type="image/png" href="RPS.png">
     <style>
         body {
             margin: 0;
@@ -292,7 +292,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="index.html">About</a></li>
                 <li><a href="https://reanplaystudio.itch.io/">Games</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -305,7 +305,7 @@
     </div>
     
     <section class="about-us">
-        <h2>About Us</h2>
+        <h2>Privacy Policy</h2>
         <p>Information We Collect<br>
             We do not collect any personal identifiable information about LetterHunter users. The game can be downloaded and played anonymously without creating an account.
             The only information we collect relates to your use of the application, such as gameplay metrics, usage statistics, aggregated analytics, and bug reports. These do not identify individual users.<br>
