--- a/Terms.html
+++ b/Terms.html
@@ -18,7 +18,7 @@
 </style>
 <head>
     <title>RPS - Rean & Play Studio</title>
-    <link rel="icon" type="image/png" href="cat.png">
+    <link rel="icon" type="image/png" href="RPS.png">
     <style>
         body {
             margin: 0;
@@ -292,7 +292,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="index.html">About</a></li>
                 <li><a href="https://reanplaystudio.itch.io/">Games</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -305,8 +305,8 @@
     </div>
     
     <section class="about-us">
-        <h2>About Us</h2>
-        <p>Intellectual Property<br>
+        <h2>Intellectual Property<br></h2>
+        <p>
             The LetterHunter game is owned and operated by Rean&Play Studio. All content and materials, including but not limited to text, graphics, logos, images, software and videos are the property of Rean&Play Studio and protected by copyright, trademark and other laws.<br>
         
             Use of Software<br>
