--- a/openbeta.html
+++ b/openbeta.html
@@ -49,7 +49,7 @@
 </style>
 <head>
     <title>RPS - Rean & Play Studio</title>
-    <link rel="icon" type="image/png" href="cat.png">
+    <link rel="icon" type="image/png" href="RPS.png">
     <style>
         body {
             margin: 0;
@@ -108,7 +108,7 @@
 </head>
 <body>
 <header>
-    <div class="logo"><img src="cat.png" height="75" width="75"/></div>
+    <div class="logo"><img src="RPS.png" height="75" width="75"/></div>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
