Added ads <3 (testing)

--- a/ios.html
+++ b/ios.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4133625525042863"
+          crossorigin="anonymous"></script>
   <title>redirecting</title>
   <meta http-equiv = "refresh" content = "2; url = https://apps.apple.com/kh/app/letterhunter/id6473466718" />
 </head>
