--- a/android.html
+++ b/android.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4133625525042863"
+          crossorigin="anonymous"></script>
   <title>redirecting</title>
   <meta http-equiv = "refresh" content = "2; url = https://play.google.com/store/apps/details?id=com.Beta.LetterHunter" />
 </head>
