--- a/Privacy.html
+++ b/Privacy.html
@@ -17,6 +17,8 @@
     }
 </style>
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4133625525042863"
+            crossorigin="anonymous"></script>
     <title>RPS - Rean & Play Studio</title>
     <link rel="icon" type="image/png" href="RPS.png">
     <style>
