--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     }
 </style>
 <head>
+    <script async custom-element="amp-auto-ads"
+            src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+    </script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4133625525042863"
             crossorigin="anonymous"></script>
     <meta name="description" content="Join the adventurous Chan on a quest across mystical islands to collect magical letters and save his homeland. Master the Khmer language with this immersive, vibrant learning game created just for native Khmer speakers.
@@ -290,6 +293,9 @@ Packed with colorful graphics, lovable characters, and engaging gameplay, Letter
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+<amp-auto-ads type="adsense"
+              data-ad-client="ca-pub-4133625525042863">
+</amp-auto-ads>
 <header>
     <div class="logo"><img src="RPS.png" height="75" width="75"/></div>
     <nav>
