--- a/ios.html
+++ b/ios.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script async custom-element="amp-auto-ads"
+          src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+  </script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4133625525042863"
           crossorigin="anonymous"></script>
   <title>redirecting</title>
   <meta http-equiv = "refresh" content = "2; url = https://apps.apple.com/kh/app/letterhunter/id6473466718" />
 </head>
 <body>
+<amp-auto-ads type="adsense"
+              data-ad-client="ca-pub-4133625525042863">
+</amp-auto-ads>
 <p>Redirecting to another URL</p>
 </body>
 </html>
