--- a/Privacy.html
+++ b/Privacy.html
@@ -19,6 +19,9 @@
 <head>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4133625525042863"
             crossorigin="anonymous"></script>
+    <script async custom-element="amp-auto-ads"
+            src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+    </script>
     <title>RPS - Rean & Play Studio</title>
     <link rel="icon" type="image/png" href="RPS.png">
     <style>
@@ -267,6 +270,9 @@
     <title>Terms and Conditions</title>
 </head>
 <body>
+<amp-auto-ads type="adsense"
+              data-ad-client="ca-pub-4133625525042863">
+</amp-auto-ads>
     <header>
         <div class="logo"><img src="RPS.png" height="75" width="75"/></div>
         <nav>
