--- a/Terms.html
+++ b/Terms.html
@@ -17,6 +17,9 @@
     }
 </style>
 <head>
+    <script async custom-element="amp-auto-ads"
+            src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+    </script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4133625525042863"
             crossorigin="anonymous"></script>
     <title>RPS - Rean & Play Studio</title>
@@ -252,6 +255,9 @@
     <title>Terms and Conditions</title>
 </head>
 <body>
+<amp-auto-ads type="adsense"
+              data-ad-client="ca-pub-4133625525042863">
+</amp-auto-ads>
     <header>
         <div class="logo"><img src="RPS.png" height="75" width="75"/></div>
         <nav>
