--- a/android.html
+++ b/android.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script async custom-element="amp-auto-ads"
+          src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+  </script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4133625525042863"
           crossorigin="anonymous"></script>
   <title>redirecting</title>
   <meta http-equiv = "refresh" content = "2; url = https://play.google.com/store/apps/details?id=com.Beta.LetterHunter" />
 </head>
 <body>
+<amp-auto-ads type="adsense"
+              data-ad-client="ca-pub-4133625525042863">
+</amp-auto-ads>
 <p>Redirecting to another URL</p>
 </body>
 </html>
