added new meta changes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta name="description" content="Join the adventurous Chan on a quest across mystical islands to collect magical letters and save his homeland. Master the Khmer language with this immersive, vibrant learning game created just for native Khmer speakers.
 Packed with colorful graphics, lovable characters, and engaging gameplay, LetterHunter transforms studying consonants, vowels and vocabulary into an exciting journey instead of a chore. Kids will learn naturally through storytelling and interactive activities tailored towards different learning styles.
 ">
-    <meta name="robots" content="index, openbeta, ios, android">
+    <meta name="robots" content="index, openbeta, ios, android,Privacy, ads.txt,Terms">
     <link rel="canonical" href="https://reanplay.studio/index" />
     <title>RPS - Rean & Play Studio</title>
     <link rel="icon" type="image/png" href="RPS.png">
